# fullstack-rust

./: .gitignore  LICENSE  README.md  docker-compose.yml
backend/: .env  Cargo.toml  Dockerfile  Makefile  README.md  docker-compose.yml
backend/src/: main.rs
backend/src/api/: api_error.rs  health.rs  mod.rs  tests.rs  transactions.rs  users.rs
backend/src/models/: transaction.rs  user.rs
backend/src/repository/: mongodb_repo.rs
backend/src/server/: axum_server.rs  mod.rs
frontend/: Makefile  env.local  package-lock.json  package.json
frontend/.next/: app-build-manifest.json  trace
frontend/.next/cache/: .tsbuildinfo  next-server.js.nft.json
frontend/.next/server/: _error.js  app-paths-manifest.json  next-font-manifest.js  next-font-manifest.json
frontend/.next/server/app/: page.js  page_client-reference-manifest.js
frontend/.next/server/pages/: _app.js  _error.js
frontend/.next/static/chunks/: _error.js  app-pages-internals.js  webpack.js
frontend/.next/static/webpack/: 6e4fdb737df81288.webpack.hot-update.json  8104f6653f681b30.webpack.hot-update.json  84b24379d37268f5.webpack.hot-update.json  dc08d518cdb2d929.webpack.hot-update.json  main.4436a95bac82a9b5.hot-update.js  main.da4c9732adf12a4e.hot-update.js  webpack.00237a8ae916fff3.hot-update.js  webpack.08bbe3671c2a994f.hot-update.js  webpack.09096539bb02b4fb.hot-update.js  webpack.0a4c0f0dfa3f8846.hot-update.js  webpack.0a877e9b08fb02da.hot-update.js  webpack.0f8387f80993a098.hot-update.js  webpack.1080f13c7d6b7ab3.hot-update.js  (+68 more)
frontend/.next/types/app/: page.ts  (+1 more)
frontend/src/app/: page.tsx
(+139 files in other folders)
