[package]
name = "carbon-sim"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.20"
bson = { version = "2.6.1", features = ["chrono-0_4"] }
chrono = "0.4.26"
dotenv = "0.15.0"
futures = "0.3.28"
mongodb = "2.6.0"
serde = "1.0.183"
tokio = { version = "1.24.2", features = ["full"] }
tokio-stream = "0.1.14"
tower = { version = "0.4.13", features = ["timeout"] }
tower-http = { version = "0.4.3", features = ["trace"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
uuid = { version = "1.2.2", features = ["v4", "serde"] }

[dev-dependencies]
test-context = "0.1.4"
